# class-8_assignments

./: .gitignore  README.md  pyproject.toml
assignment-1/: README.md  main.py
assignment-2/: README.md  main_native.py
assignment-3/: .env  README.md  main.py
assignment-4/: README.md  main.py
assignment-4/data/: customer_data.py  knowledge_base.py
assignment-4/tools/: support_tools.py
